<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Converter Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="convert_from_text">Convert</string>
    <string name="default_tsp_value">0 tsp</string>
    <string name="default_tbs_value">0 tbs</string>
    <string name="default_oz_value">0 oz</string>
    <string name="default_cup_value">0 cup</string>
    <string name="default_quart_value">0 quart</string>
    <string name="default_gallon_value">0 gallon</string>
    <string name="default_ml_value">0 ml</string>
    <string name="default_liter_value">0 liter</string>
    <string name="default_pint_value">0 pint</string>
    <string name="default_shot_value">0 shot</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
